--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -4,6 +4,7 @@
     border: 2px solid black;
     border-radius: 10px;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 .container {
@@ -29,14 +30,12 @@
 .userTag {
     font-size: 30px;
     color: #8c8c8c;
-    font-weight: normal;
     margin-bottom: 10px;
 }
 
 .userLocation {
     font-size: 32px;
     color: #8c8c8c;
-    font-weight: normal;
     margin-bottom: 10px;
 }
 
