--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   font-family: Montserrat, Roboto, sans-serif;
+  font-weight: normal;
   max-width: 1280px;
   margin: 0 auto;
   padding: 16px;
